fix database and write tests for server.js

--- a/resources/html/404.html
+++ b/resources/html/404.html
@@ -4,7 +4,7 @@
 <title>Weather reader</title>
 </head>
 <body>
-	<h1>Ops, error 404, try:</h1>
-	<h3>index.html</h3>
+	<h1>Ops, error 404</h1>
+	<a href="./index.html">Try index.html</a>
 </body>
 </html>
